Fix mobile horizontal overflow

--- a/css/entry.css
+++ b/css/entry.css
@@ -32,6 +32,8 @@ main.entry .e-content > p,
 main.entry .e-content > ul,
 main.entry .e-content > ol,
 main.entry .e-content > figure,
+main.entry .e-content > p > img,
+main.entry .e-content > p > video,
 main.entry .e-content > img,
 main.entry .e-content > video,
 main.entry .e-content > blockquote,
